--- a/Biotechnology/zotero-LNP.bib
+++ b/Biotechnology/zotero-LNP.bib
@@ -235,6 +235,24 @@ Section: New Results},
 	keywords = {Blood-brain barrier, Ionic liquids, Ionizable cationic lipid, Lipid nanoparticles, Red blood cell hitchhiking},
 }
 
+@article{wu_lipid_nodate,
+	title = {Lipid Nanoparticles for Delivery of {CRISPR} Gene Editing Components},
+	volume = {n/a},
+	rights = {© 2025 The Author(s). Small Methods published by Wiley-{VCH} {GmbH}},
+	issn = {2366-9608},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/smtd.202401632},
+	doi = {10.1002/smtd.202401632},
+	abstract = {Gene editing has emerged as a promising therapeutic option for treating genetic diseases. However, a central challenge in the field is the safe and efficient delivery of these large editing tools, especially in vivo. Lipid nanoparticles ({LNPs}) are attractive nonviral vectors due to their low immunogenicity and high delivery efficiency. To maximize editing efficiency, {LNPs} should efficiently protect gene editing components against multiple biological barriers and release them into the cytoplasm of target cells. In this review, the widely used {CRISPR} gene editing systems are first overviewed. Then, each component of {LNPs}, as well as their effects on delivery, are systematically discussed. Following this, the current {LNP} engineering strategies to achieve non-liver targeting are summarized. Finally, preclinical and clinical applications of {LNPs} for in vivo genome editing are highlighted, and perspectives for the future development of {LNPs} are provided.},
+	pages = {2401632},
+	issue = {n/a},
+	journaltitle = {Small Methods},
+	author = {Wu, Fan and Li, Nei and Xiao, Yudian and Palanki, Rohan and Yamagata, Hannah and Mitchell, Michael J. and Han, Xuexiang},
+	urldate = {2025-06-13},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/smtd.202401632},
+	keywords = {delivery, gene editing, gene therapy, lipid nanoparticles},
+}
+
 @article{hou_lipid_2021,
 	title = {Lipid nanoparticles for {mRNA} delivery},
 	volume = {6},
