--- a/Biotechnology/zotero-LNP.bib
+++ b/Biotechnology/zotero-LNP.bib
@@ -29,6 +29,26 @@ Section: New Results},
 	date = {2014-08-01},
 }
 
+@article{zhang_adeno-associated_2019,
+	title = {Adeno-associated virus 2 bound to its cellular receptor {AAVR}},
+	volume = {4},
+	rights = {2019 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {2058-5276},
+	url = {https://www.nature.com/articles/s41564-018-0356-7},
+	doi = {10.1038/s41564-018-0356-7},
+	abstract = {Adeno-associated virus ({AAV}) is a leading vector for virus-based gene therapy. The receptor for {AAV} ({AAVR}; also named {KIAA}0319L) was recently identified, and the precise characterization of {AAV}–{AAVR} recognition is in immediate demand. Taking advantage of a particle-filtering algorithm, we report here the cryo-electron microscopy structure of the {AAV}2–{AAVR} complex at 2.8 Å resolution. This structure reveals that of the five Ig-like polycystic kidney disease ({PKD}) domains in {AAVR}, {PKD}2 binds directly to the spike region of the {AAV}2 capsid adjacent to the icosahedral three-fold axis. Residues in strands B and E, and the {BC} loop of {AAVR} {PKD}2 interact directly with the {AAV}2 capsid. The interacting residues in the {AAV}2 capsid are mainly in {AAV}-featured variable regions. Mutagenesis of the amino acids at the {AAV}2–{AAVR} interface reduces binding activity and viral infectivity. Our findings provide insights into the biology of {AAV} entry with high-resolution details, providing opportunities for the development of new {AAV} vectors for gene therapy.},
+	pages = {675--682},
+	number = {4},
+	journaltitle = {Nature Microbiology},
+	shortjournal = {Nat Microbiol},
+	author = {Zhang, Ran and Cao, Lin and Cui, Mengtian and Sun, Zixian and Hu, Mingxu and Zhang, Rouxuan and Stuart, William and Zhao, Xiaochu and Yang, Zirui and Li, Xueming and Sun, Yuna and Li, Shentao and Ding, Wei and Lou, Zhiyong and Rao, Zihe},
+	urldate = {2025-06-13},
+	date = {2019-04},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Electron microscopy, Virology},
+}
+
 @article{cavazza_advanced_2025,
 	title = {Advanced delivery systems for gene editing: A comprehensive review from the {GenE}-{HumDi} {COST} Action Working Group},
 	volume = {36},
@@ -139,6 +159,25 @@ Section: New Results},
 	date = {2021},
 	langid = {english},
 	doi = {10.1007/978-3-030-50703-9},
+}
+
+@article{liu_enhancing_2021,
+	title = {Enhancing prime editing by Csy4-mediated processing of {pegRNA}},
+	volume = {31},
+	rights = {2021 The Author(s)},
+	issn = {1748-7838},
+	url = {https://www.nature.com/articles/s41422-021-00520-x},
+	doi = {10.1038/s41422-021-00520-x},
+	pages = {1134--1136},
+	number = {10},
+	journaltitle = {Cell Research},
+	shortjournal = {Cell Res},
+	author = {Liu, Yao and Yang, Guang and Huang, Shuhong and Li, Xiangyang and Wang, Xin and Li, Guanglei and Chi, Tian and Chen, Yulin and Huang, Xingxu and Wang, Xiaolong},
+	urldate = {2025-06-13},
+	date = {2021-10},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {{DNA} recombination, Homologous recombination},
 }
 
 @article{wei_enhancing_2024,
