--- a/Biotechnology/zotero-LNP.bib
+++ b/Biotechnology/zotero-LNP.bib
@@ -292,6 +292,25 @@ Section: New Results},
 	keywords = {delivery, gene editing, gene therapy, lipid nanoparticles},
 }
 
+@article{wu_lipid_2025,
+	title = {Lipid Nanoparticles for Delivery of {CRISPR} Gene Editing Components},
+	volume = {n/a},
+	rights = {© 2025 The Author(s). Small Methods published by Wiley-{VCH} {GmbH}},
+	issn = {2366-9608},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/smtd.202401632},
+	doi = {10.1002/smtd.202401632},
+	abstract = {Gene editing has emerged as a promising therapeutic option for treating genetic diseases. However, a central challenge in the field is the safe and efficient delivery of these large editing tools, especially in vivo. Lipid nanoparticles ({LNPs}) are attractive nonviral vectors due to their low immunogenicity and high delivery efficiency. To maximize editing efficiency, {LNPs} should efficiently protect gene editing components against multiple biological barriers and release them into the cytoplasm of target cells. In this review, the widely used {CRISPR} gene editing systems are first overviewed. Then, each component of {LNPs}, as well as their effects on delivery, are systematically discussed. Following this, the current {LNP} engineering strategies to achieve non-liver targeting are summarized. Finally, preclinical and clinical applications of {LNPs} for in vivo genome editing are highlighted, and perspectives for the future development of {LNPs} are provided.},
+	pages = {2401632},
+	issue = {n/a},
+	journaltitle = {Small Methods},
+	author = {Wu, Fan and Li, Nei and Xiao, Yudian and Palanki, Rohan and Yamagata, Hannah and Mitchell, Michael J. and Han, Xuexiang},
+	urldate = {2025-06-13},
+	date = {2025},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/smtd.202401632},
+	keywords = {delivery, gene editing, gene therapy, lipid nanoparticles},
+}
+
 @article{hou_lipid_2021,
 	title = {Lipid nanoparticles for {mRNA} delivery},
 	volume = {6},
@@ -346,6 +365,19 @@ Section: New Results},
 	note = {Number: 10
 Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {endosomal escape, immunogenicity, lipid nanoparticle, reactogenicity, selective organ-targeting {LNP}, toxicity},
+}
+
+@article{natsuko_role_2013,
+	title = {Role of orexin in modulating arousal, feeding, and motivation},
+	url = {https://www.researchgate.net/figure/Schematic-drawing-of-coronal-section-and-sagittal-section-through-rat-brain-summarizing_fig2_236329130},
+	doi = {10.3389/fnbeh.2013.00028},
+	abstract = {Download scientific diagram {\textbar} Schematic drawing of coronal section and sagittal section through rat brain, summarizing the orexin neuronal system. (A) Prepro-orexin {mRNA}-containing neurons are shown in black superimposed upon anatomical structures of the hypo- and subthalamic areas. The rectangle designates the area schematized in the figure. Abbreviations: {LH}, lateral hypothalamic area; {PeF}, perifornical nucleus; {PH}, posterior hypothalamic area; Sth, subthalamic nucleus; {SubI}, subincertal nucleus; {ZIV}, ventral zona incerta. Additional landmarks include: {THAL}, thalamus; {HAB}, habenular complex; ic, internal capsule; opt, optic tract; mt, mammillothalamic tract; f, fornix; mfb, medial forebrain bundle; 3V, third ventricle; Arc, arcuate hypothalamic nucleus; {DM}, dorsomedial hypothalamic nucleus; and {VMH}, ventromedial hypothalamic nucleus. (B) Orexin neurons are found only in the lateral hypothalamic area and project to the entire central nervous system. The thickness of arrows represents relative abundance of projections. Abbreviations: 3V, third ventricle; 4V, fourth ventricular; {TMN}, tuberomammillary nucleus; {LC}, locus coeruleus; {LDT}, laterodorsal tegmental nucleus; {PPT}, pedunculopontine nucleus. from publication: Role of orexin in modulating arousal, feeding, and motivation {\textbar} Orexin deficiency results in narcolepsy in humans, dogs, and rodents, suggesting that the orexin system is particularly important for maintenance of wakefulness. However, orexin neurons are "multi-tasking" neurons that regulate sleep/wake states as well as feeding behavior,... {\textbar} Orexin, Arousal and Reward {\textbar} {ResearchGate}, the professional network for scientists.},
+	journaltitle = {{ResearchGate}},
+	shortjournal = {Frontiers in behavioral neuroscience},
+	author = {Natsuko, Tsujino and Sakurai, Takeshi},
+	urldate = {2025-06-13},
+	date = {2013},
+	langid = {english},
 }
 
 @article{anzalone_search-and-replace_2019,
