--- a/Biotechnology/zotero-LNP.bib
+++ b/Biotechnology/zotero-LNP.bib
@@ -367,6 +367,24 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {endosomal escape, immunogenicity, lipid nanoparticle, reactogenicity, selective organ-targeting {LNP}, toxicity},
 }
 
+@article{wang_recent_2024-1,
+	title = {Recent Advances in Lipid Nanoparticles and Their Safety Concerns for {mRNA} Delivery},
+	volume = {12},
+	issn = {2076-393X},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC11510967/},
+	doi = {10.3390/vaccines12101148},
+	abstract = {Introduction: The advent of lipid nanoparticles ({LNPs}) as a delivery platform for {mRNA} therapeutics has revolutionized the biomedical field, particularly in treating infectious diseases, cancer, genetic disorders, and metabolic diseases. Recent Advances in Therapeutic {LNPs}: {LNPs}, composed of ionizable lipids, phospholipids, cholesterol, and polyethylene glycol ({PEG}) lipids, facilitate efficient cellular uptake and cytosolic release of {mRNA} while mitigating degradation by nucleases. However, as synthetic entities, {LNPs} face challenges that alter their therapeutic efficacy and safety concerns. Toxicity/Reactogenicity/Immunogenicity: This review provides a comprehensive overview of the latest advancements in {LNP} research, focusing on preclinical safety assessments encompassing toxicity, reactogenicity, and immunogenicity. Summary and Outlook: Additionally, it outlines potential strategies for addressing these challenges and offers insights into future research directions for enhancing the application of {LNPs} in {mRNA} therapeutics.},
+	pages = {1148},
+	number = {10},
+	journaltitle = {Vaccines},
+	shortjournal = {Vaccines (Basel)},
+	author = {Wang, Jialiang and Ding, Yaopeng and Chong, Kellie and Cui, Meng and Cao, Zeyu and Tang, Chenjue and Tian, Zhen and Hu, Yuping and Zhao, Yu and Jiang, Shaoyi},
+	urldate = {2025-06-13},
+	date = {2024-10-08},
+	pmid = {39460315},
+	pmcid = {PMC11510967},
+}
+
 @article{natsuko_role_2013,
 	title = {Role of orexin in modulating arousal, feeding, and motivation},
 	url = {https://www.researchgate.net/figure/Schematic-drawing-of-coronal-section-and-sagittal-section-through-rat-brain-summarizing_fig2_236329130},
